library/general/httpsonly/example.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-demo
  annotations:
    kubernetes.io/ingress.allow-http: false
spec:
  tls:
  - secretName: secret-cert-myown
